Portfolio/PortStyle.css
body.home {
    background-image: url("images/triangle.svg");
    min-width: 1210px;
    background-size: 80%;
    background-repeat: no-repeat;
}

body.content {
     background-image: url("images/bg.png");
     background-repeat: no-repeat;
 }

 ::-webkit-scrollbar {
    width: 15px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #dedede; 
}

/* Handle */
::-webkit-scrollbar-thumb {
    min-height: 10px;
    border: 2px solid #dedede;
    background: #c4285b;
    border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #941e46; 
}

 .contenthead {
     order: 2;
     text-align: center;
     padding-top: 15px;
     margin: 0 auto;
 }

 .dropdownCNT {
     order: 1;
     margin: 0 auto;
     padding: 20px 0px 15px 0px;
 }

 .intro {
     order: 3;
     color: white;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     margin: 0 auto;
     padding: 15px 0 0 0;
 }

 .stuff {
     order: 4;
     display: flex;
     flex-direction: row;
 }

 .image, #pdf, .altImage {
     flex-direction: row;
     padding-top: 110px;
     order: 1;
     flex-grow: 1;
     padding-left: 15px;
 }

 .image img, #pdf, .altImage {
     max-width: 500px;
 }

 .information {
     padding-right: 40px;
     flex-grow: 2;
     align-content: left;
     padding-top: 90px;
     max-width: 60%;
     order: 2;
 }

 .information h3 {
     font-family: 'Lato', sans-serif;
     font-size: 20px;
     color: #c4285b;
 }

 .information p, .information li {
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
     color: #941e46;
 }

 .information li {
    list-style: none;
    margin-left: 20px;
    margin-bottom: 5px;
 }

 .information button, .quicklinks button {
     margin-top: 15px;
     background-color: #dedede;
     font-family: 'Montserrat', sans-serif;
     color: #c4285b;
     -webkit-transition: .8s;
     transition: .8s;
 }

 .information button:hover, .quicklinks button:hover {
    margin-top: 15px;
    background-color: #c4285b;
    font-family: 'Montserrat', sans-serif;
    color: white;
}

 .slideshow {
     order: 4;
     margin: 0 auto;
     padding-top: 100px;
 }

 .slideshow img{
    border: 1px solid lightgrey;
    box-shadow: 5px 10px lightgrey;
 }

 .slideshow p {
    margin-top: 15px;
    font-family: 'Montserrat', sans-serif;
    color: #c4285b;
    font-size: 15px;
    text-align: center;
}

.quicklinks {
    order: 5;
    margin: 0 auto;
}

.wrapper {
    display: flex;
    flex-direction: column;
}

button, button a {
    border: none;
    background-color: transparent;
    color: white;
    text-decoration: none;
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;

}

button a {
    padding: 0px 10px 0px 10px;
}

svg {
    height: 5%;
    width: 5%;
}

h1 {
    order: 1;
    align-self: flex-start;
    color: white;
    font-family: 'Lato', sans-serif;
    font-size: 70px;
    margin-left: 40px;
}

#things {
    width: 100%;
    order: 3;
    display: flex;
    flex-direction: row;
}

h2 {
    order: 2;
    font-size: 50px;
    align-self: flex-end;
    flex-shrink: 1;
    text-align: center;
    color: #c4285b;
    font-family: 'Montserrat', sans-serif;
    margin-top: 100px;
    margin-left: 40%;
    margin-right: 20%;
}

/*#hex {
    order: 3;
    background-image: url("images/hexagonW.png");
    background-repeat: no-repeat;
    height: 200px;
    margin-top: 140px;
    padding: 0px 30px 0px 200px;
}

#hex2 {
    order: 2;
    background-image: url("images/hexagonW.png");
    background-repeat: no-repeat;
    height: 200px;
    margin-top: 10px;
    padding: 0px 30px 0px 200px;
}*/

#myface {
    order: 1;
    background-image: url("images/hexagon.png");
    background-repeat: no-repeat;
    height: 200px;
    margin-top: 100px;
    margin-left: 10%;
    padding: 0px 30px 0px 200px;
    transition: .8s;
    animation: turn 1s linear 2s 1 forwards;
}

#print {
    margin-left: 25%;
    margin-top: 120px;
    text-align: center;
    order: 3;
    width: 80px;
    background-color: #dedede;
    font-family: 'Montserrat', sans-serif;
    color: #c4285b;
    -webkit-transition: .8s;
    transition: .8s;
}

#print:hover {
    background-color: #c4285b;
    font-family: 'Montserrat', sans-serif;
    color: white;
}

#resume {
    width: 50%;
    max-width: 4960;
    border: 2px solid #dedede;
    padding: 10px 10px 10px 10px;
    margin: 0 auto;
    order: 4;
    font-family: Arial, Helvetica, sans-serif;
}

#resume img {
    margin-left: 42%;
    width: 100px;
}

#resume h1 {
    font-size: 26px;
    border-bottom: 3px solid #c4285b;
    text-align: center;
    padding-bottom: 5px;
    margin: 0 auto;
    color: #c4285b;
}

#resume h2 {
    padding-top: 5px;
    margin: 0 auto;
    color: #c4285b;
    font-size: 12px;
}

#resume #search {
    padding: 10px 0px 10px 0px;
    border-bottom: 3px solid #c4285b;
    text-align: center;
    margin: 0 auto;
    font-size: 12px;
    color: #404040;
}

#resume h3 {
    font-size: 14px;
    color: #c4285b;
}

#resume h4 {
    font-size: 11px;
    color: #404040;
}

#resume p, #resume ul {
    font-size: 11px;
    color: #404040;
    padding-bottom: 10px;
}

.altImage {
    display: none;
}

.about {
    order: 4;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.about .information {
    order: 2;
    width: 50%;
    margin: 50px 0px 20px 50px;
}

.about .links {
    margin: 150px 50px 20px 50px;
    order: 1;
}

.about .links ul {
    list-style: none;
}

.about .links p {
    padding: 5px 5px 5px 5px;
    background-color: #dedede;
    font-family: 'Montserrat', sans-serif;
    font-size: 15px;
    color: #c4285b;
}

.about .links a {
    font-size: 20px;
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
    color: #c4285b;
    transition: .8s;
    -webkit-transition: .8s;
}

.about .links a:hover {
    font-size: 25px;
}


/* Dropdown Button */
.drop {
    border: none;
    background-color: transparent;
    color: white;
    text-decoration: none;
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    border: none;
    cursor: cell;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    order: 2;
    margin-top: 10px;
    margin-left: 40px;
    margin-bottom: 0;
    flex-wrap: wrap; 
    position: relative;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: rgba(225, 225, 225, .9);
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
    min-width: 160px;
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: #c4285b;
    transition: .8s;
    -webkit-transition: .8s;
    padding: 15px 20px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #c4285b; color: white; border: 1px dashed white;}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {display:block;}

@keyframes turn {
    100%{transform: rotateY(180deg); background-image: url('images/me.png');}
}

/*mobile devices*/
@media screen and (max-width: 1024px) {
    body.home {
        background-size: 125%;
        min-width: 282px;
        max-width: 360px;
    }

    body.content {
        background-image: url(images/bg2.png);
    }

    #things {
        order: 3;
        flex-direction: column;
    }

    #myface {
        order: 1;
        margin-top: 20px;
        background-image: url("images/hexagon.png");
        background-repeat: no-repeat;
        animation: turn 1s linear 1 forwards;
    }

    #pdf {
        display: none;
    }

    .wrapper {
        display: flex;
        flex-direction: column;
        max-width: 400px;
    }

    .stuff {
        flex-direction: column;
    }

    .altImage {
        display: flex;
    }
   
    .image img, .altImage img {
        width: 100%;
        height: 100%;
        margin: 0 auto;
    }
   
    .information, .altImage {
        padding: 0 15px 0 15px;
        flex-grow: 2;
        max-width: 100%;
    }

    /*https://www.w3schools.com/howto/howto_css_menu_icon.asp*/
    .hamburger {
        display: block;
        order: 1;
        z-index: 1;
        width: 25px;
        height: 5px;
        background-color: white;
        margin: 4px;
        transition: .8s;
        -webkit-transition: .8s;
    }

    .change [role="Navigation"] {
        display: flex;
    }

    .change .hamburger:nth-child(1) {
        -webkit-transform: rotate(-45deg);
        transform:rotate(-45deg) translate(-5px, 8px);
    }
    
    .change .hamburger:nth-child(2) {
        opacity: 0;
    }
    
    .change .hamburger:nth-child(3) {
        -webkit-transform: rotate(45deg);
        transform: rotate(45deg) translate(-5px, -8px);
    }

    h1 {
        order: 1;
        text-align: left;
        align-self: flex-start;
        color: white;
        font-family: 'Lato', sans-serif;
        font-size: 40px;
    }

    h2 {
        order: 2;
        font-size: 25px;
        align-self: flex-end;
        flex-grow: inherit;
        text-align: center;
        color: #c4285b;
        font-family: 'Montserrat', sans-serif;
        margin-top: 50px;
        margin-right: 10%;
        margin-left: 5%;
    }

    .contenthead {
        order: 2;
        text-align: center;
        font-size: 40px;
        margin: 0 auto;
    }

    .dropdown {
        display: none;
        order: 1;
        width: 100%;
    }

    .dropdownCNT {
        display: none;
        order: 4;
        width: 100%;
        position: relative;
        z-index: 1;
    }

    .dropdown button, .dropdownCNT button {
        margin: 5px 0px 10px 5px;
        text-align: center;
        background-color: rgba(225, 225, 225, .9);
        color: #c4285b;
    }

    .dropdown a, .dropdownCNT a {
        padding-left: 0px;
        color: #c4285b;
    }

    .intro {
        order: 3;
        color: white;
        font-family: 'Montserrat', sans-serif;
        font-size: 15px;
        margin: 0 auto;
        padding: 5px 0 0 0;
    }
   
    .slideshow img {
        order: 4;
        width: 100%;
        margin: 0 auto;
        padding-top: 50px;
    }

   .slideshow p {
        color: #c4285b;
        font-family: 'Montserrat', sans-serif;
        font-size: 15px;
        justify-content: center;
        flex-wrap: wrap;
    }

    .quicklinks {
        text-align: center;
    }

    #resume {
        width: 80%;
    }

    .about .information {
        width: 100%;
        margin: 5px 5px 5px 5px;
    }

    .about .links {
        margin: 80px 0px 20px 5px;
        order: 1;
    }
}

@page {
    size: A4 portrait;
}

@media print {
    .wrapper {
        display: none;
        visibility: hidden;
    }

    #resume {
        visibility: visible;
        border: none;
        margin: 0;
        width: 100%;
    }
}

